--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.slackcnt.android.shutup"
-    android:versionCode="1"
-    android:versionName="1.0" >
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	package="org.slackcnt.android.shutup"
+	android:versionCode="1"
+	android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="3" />
+	<uses-sdk android:minSdkVersion="3" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".ShutUpActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name">
+		<activity
+			android:name=".ShutUpActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<service
+			android:name=".ShutUpService"
+			android:enabled="true">
+		</service>
 
+		<receiver
+			android:name="ShutUpReceiver"
+			android:enabled="true"
+			android:exported="false">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
+	</application>
 </manifest>
