--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,11 @@
 	android:versionCode="1"
 	android:versionName="1.0">
 
-	<uses-sdk android:minSdkVersion="3" />
+	<uses-sdk
+		android:minSdkVersion="7"
+		android:targetSdkVersion="7" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 	<application
 		android:icon="@drawable/ic_launcher"
