--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
 	<application
 		android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name">
+		android:label="@string/app_name"
+		android:theme="@style/ShutUpTheme">
 		<activity
 			android:name=".ShutUpActivity"
 			android:label="@string/app_name">
